chore: change name warehouse to inventory
